--- a/app/src/main/res/drawable/background1.xml
+++ b/app/src/main/res/drawable/background1.xml
@@ -1,9 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-<item>
-    <shape android:shape="rectangle">
-        <gradient android:angle="135" android:startColor="#2c3e50" android:endColor="#2980b9"/>
-        <corners android:topRightRadius="100dp"/>
-    </shape>
-</item>
-</selector>
+<!--<selector xmlns:android="http://schemas.android.com/apk/res/android">-->
+<!--<item>-->
+<!--    <shape android:shape="rectangle">-->
+<!--        <gradient android:angle="135" android:startColor="#2c3e50" android:endColor="#2980b9"/>-->
+<!--        <corners android:topRightRadius="100dp"/>-->
+<!--    </shape>-->
+<!--</item>-->
+<!--</selector>-->
+
+<!--<selector xmlns:android="http://schemas.android.com/apk/res/android">-->
+<!--<item>-->
+<!--    <shape android:shape="rectangle">-->
+<!--        <gradient-->
+<!--            android:type="linear"-->
+<!--            android:startColor="#20BDFF"-->
+<!--            android:endColor="#5433FF"-->
+<!--            android:angle="90"-->
+<!--            />-->
+<!--    </shape>-->
+<!--</item>-->
+<!--</selector>-->
+
+
+
+
+<shape
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+
+    <gradient
+        android:type="linear"
+        android:startColor="#336FFF"
+        android:centerColor="#2980B9"
+        android:endColor="#20BDFF"
+        android:angle="90"
+        />
+
+</shape>
+
+
+
