--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -108,14 +108,16 @@
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/Save_1"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_width="229dp"
+                android:layout_height="52dp"
                 android:layout_marginStart="71dp"
                 android:layout_marginTop="32dp"
                 android:layout_marginEnd="71dp"
                 android:background="@drawable/buttonsign_up"
                 android:text="LogIn"
+
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.483"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/Email_1" />
 
