--- a/app/src/main/res/layout/activity_owner.xml
+++ b/app/src/main/res/layout/activity_owner.xml
@@ -1,108 +1,161 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg4"
-    tools:context=".Owner">
+    android:orientation="vertical"
+    tools:context=".Signup">
 
-    <!--    <ImageView-->
-    <!--        android:id="@+id/imageView4"-->
-    <!--        android:layout_width="wrap_content"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:scaleType="centerCrop"-->
-    <!--        app:layout_constraintStart_toStartOf="parent"-->
-    <!--        app:layout_constraintTop_toTopOf="parent"-->
-    <!--        app:srcCompat="@drawable/bg4" />-->
+    <LinearLayout
+        android:id="@+id/lv1"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.2"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:text="Name:-"
-        android:textColor="#FFFFFF"
-        android:textSize="24sp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/ed1"
-        app:layout_constraintStart_toStartOf="parent" />
+        <!--        <TextView-->
+        <!--            android:id="@+id/tv1"-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:layout_marginTop="50dp"-->
+        <!--            android:fontFamily="cursive"-->
+        <!--            android:gravity="center"-->
+        <!--            android:text="Hi there"-->
+        <!--            android:textColor="#000000"-->
+        <!--            android:textSize="70dp" />-->
 
-    <EditText
-        android:id="@+id/ed2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="28dp"
-        android:layout_marginBottom="132dp"
-        android:ems="10"
-        android:hint="Enter your address"
-        android:inputType="textPersonName"
-        android:textColor="#FDFDFD"
-        android:textColorHint="#FFFFFE"
-        app:layout_constraintBottom_toTopOf="@+id/ed3"
-        app:layout_constraintEnd_toEndOf="parent" />
+        <!--        <TextView-->
+        <!--            android:id="@+id/textView14"-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:layout_marginTop="10dp"-->
+        <!--            android:gravity="center"-->
+        <!--            android:text="Welcome to TMH"-->
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="40dp"
-        android:text="Address:-"
-        android:textColor="#FBFBFA"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="@+id/ed2"
-        app:layout_constraintEnd_toStartOf="@+id/ed2" />
+        <!--            android:textColor="#000000" />-->
 
-    <EditText
-        android:id="@+id/ed3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="288dp"
-        android:ems="10"
-        android:hint="Enter your phone no."
-        android:inputType="textPersonName"
-        android:maxLength="10"
-        android:textColor="#FFFFFF"
-        android:textColorHint="#FDFDFC"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.8"
+            android:background="@drawable/background1">
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="44dp"
-        android:text="Phone no."
-        android:textColor="#FBFBFB"
-        android:textSize="24sp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/ed3"
-        app:layout_constraintEnd_toStartOf="@+id/ed3" />
+            <ImageView
+                android:id="@+id/imageView3"
+                android:layout_width="208dp"
+                android:layout_height="0dp"
+                android:layout_marginBottom="369dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView17"
+                app:srcCompat="@drawable/logo" />
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/button3"
-        android:layout_width="210dp"
-        android:layout_height="90dp"
-        android:layout_marginTop="108dp"
-        android:background="@drawable/button_need"
-        android:text="Save"
-        android:textColor="#191919"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ed3" />
+            <TextView
+                android:id="@+id/textView15"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="351dp"
+                android:fontFamily="@font/poppins"
+                android:text="Take Me Home"
+                android:textColor="#ffffff"
+                android:textSize="25sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.496"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/imageView3"
+                app:layout_constraintVertical_bias="0.0" />
 
-    <EditText
-        android:id="@+id/ed1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="24dp"
-        android:layout_marginBottom="84dp"
-        android:ems="10"
-        android:hint="Enter your name"
-        android:inputType="textPersonName"
-        android:textColor="#FDFDFD"
-        android:textColorHint="#FDFDFC"
-        app:layout_constraintBottom_toTopOf="@+id/ed2"
-        app:layout_constraintEnd_toEndOf="parent" />
+            <EditText
+                android:id="@+id/ed1"
+                android:layout_width="250dp"
+                android:layout_height="48dp"
+                android:layout_marginStart="64dp"
+                android:layout_marginTop="44dp"
+                android:layout_marginEnd="64dp"
+                android:background="@drawable/backgroundedittext"
+                android:hint="Name"
+                android:inputType="textPersonName"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:textColorHint="#ffffff"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.518"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView15" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <EditText
+                android:id="@+id/ed2"
+                android:layout_width="250dp"
+                android:layout_height="48dp"
+                android:layout_marginStart="64dp"
+                android:layout_marginTop="100dp"
+                android:layout_marginEnd="64dp"
+                android:background="@drawable/backgroundedittext"
+                android:ems="10"
+                android:hint="Address"
+                android:inputType="textEmailAddress"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:textColorHint="#ffffff"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.518"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView15" />
+
+            <EditText
+                android:id="@+id/ed3"
+                android:layout_width="250dp"
+                android:layout_height="48dp"
+                android:layout_marginStart="64dp"
+                android:layout_marginTop="155dp"
+                android:layout_marginEnd="64dp"
+                android:background="@drawable/backgroundedittext"
+                android:ems="10"
+                android:hint="Phone no."
+                android:inputType="textWebPassword"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:textColorHint="#ffffff"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.518"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView15" />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/button3"
+                android:layout_width="250dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="67dp"
+                android:background="@drawable/buttonsign_up"
+                android:text="Save"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.496"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/imageView3"
+                app:layout_constraintVertical_bias="0.98" />
+
+
+
+            <TextView
+                android:id="@+id/textView17"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="18dp"
+                android:fontFamily="@font/poppins"
+                android:text="Enter your details"
+                android:textColor="#ffffff"
+                android:textSize="38sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@+id/imageView3"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
+</LinearLayout>
