--- a/app/src/main/res/layout/activity_ssignup.xml
+++ b/app/src/main/res/layout/activity_ssignup.xml
@@ -82,7 +82,7 @@
                 android:background="@drawable/backgroundedittext"
                 android:ems="10"
                 android:hint="Profession"
-                android:inputType="textWebPassword"
+                android:inputType="text"
                 android:paddingLeft="20dp"
                 android:paddingRight="20dp"
                 android:textColorHint="#ffffff"
@@ -101,7 +101,7 @@
                 android:background="@drawable/backgroundedittext"
                 android:ems="10"
                 android:hint="Contact no."
-                android:inputType="textWebPassword"
+                android:inputType="text"
                 android:paddingLeft="20dp"
                 android:paddingRight="20dp"
                 android:textColorHint="#ffffff"
@@ -122,7 +122,7 @@
                 android:background="@drawable/backgroundedittext"
                 android:ems="10"
                 android:hint="Dlink"
-                android:inputType="textWebPassword"
+                android:inputType="text"
                 android:paddingLeft="20dp"
                 android:paddingRight="20dp"
                 android:textColorHint="#ffffff"
